[workspace]
members = ["aoc2024"]

[workspace.package]
authors = ["Daqian Li <lidaqian11@gmail.com>"]
keywords = ["advent-of-code", "aoc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/li-daqian/aoc"

[workspace.dependencies]
aoc-runner = { version = "0.3" }
aoc-runner-derive = { version = "0.3" }
indoc = { version = "2" }