[package]
name = "aoc2024"
description = "Advent of Code 2024"
edition = "2021"
rust-version = "1.82"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[dependencies]
aoc-runner = { workspace = true }
aoc-runner-derive = { workspace = true }
bit-vec = { workspace = true }
indoc = { workspace = true }

[features]
default = []

[lib]
bench = false
